--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "رفيق المزارع",
-  "short_name": "المزارع",
+  "short_name": "رفيق المزارع",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f3f4f6",
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon512.png",
+      "src": "./icon512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "icon512.png",
+      "src": "./icon512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
