--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "./icon512.png",
-      "sizes": "512x512",
+      "src": "/icon512.png",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
